# cultura_digital

./: .gitignore  README.md  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
backend/: .env.example  .gitignore  README.md  check_models.py  main.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: settings.py
backend/app/api/routers/: activity.py  slides.py  unit.py
backend/app/api/services/: activity_generator.py  lesson_plan_generator.py
backend/app/engine/loaders/: __init__.py  file.py
backend/tests/integration/: test_api.py  test_rag.py
backend/tests/mocks/: lesson_plan_mock.py
backend/tests/unit/: test_generators.py
docs/: HU.md
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: main.tsx
frontend/src/app/: providers.tsx
src/: index.css
src/__tests__/unit/: httpClient.test.ts  materiaisServices.test.ts  materialExport.test.ts
src/app/: layout.tsx  providers.tsx
src/core/http/: client.ts
src/core/repositories/: disciplinas.ts  slides.ts
src/core/storage/: materiaisStorage.ts  slidesStorage.ts
src/features/disciplinas/: hooks.ts  services.ts  ui.tsx
src/features/materiais/: hooks.ts  models.ts  services.ts  ui.tsx
src/features/rag/: infra.ts  usecases.ts
src/features/unidades/: hooks.ts  services.ts  ui.tsx
src/shared/components/: Alert.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  Dialog.tsx  FormFields.tsx  PageHeader.tsx  Toast.tsx
src/tests/mocks/: lessonPlan.ts
(+42 files in other folders)
