[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
fastapi = "^0.109.1"
python-dotenv = "^1.0.0"
aiostream = "^0.5.2"
llama-index = "^0.14.12"
cachetools = "^5.3.3"
docx2txt = "^0.8"
llama-index-llms-openai = "^0.6.13"
llama-index-embeddings-openai = "^0.5.1"
llama-parse = "<0.6.0"
llama-cloud = "0.1.35"
llama-index-llms-openai-like = "^0.5.3"
llama-index-llms-gemini = "^0.6.1"
llama-index-embeddings-huggingface = "^0.6.1"
sentence-transformers = "^3.0.1"
fpdf2 = "^2.8.5"
python-docx = "^1.2.0"
google-generativeai = "^0.8.6"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
